[package]
name = "jsonwebtoken-google"
version = "0.1.3"
authors = ["Kviring Aleksey <alex@kviring.com>"]
edition = "2018"
description = "parse and validate google jwt token with jsonwebtoken"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/jsonwebtoken-google"
readme = "README.md"
keywords = ["google", "jwt", "sign", "token", "android"]
repository = "https://github.com/cheetah-games/jsonwebtoken-google"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "7.2.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = ["json"] }
headers = "0.3.1"
tokio = "1.0"
httpmock = { version = "0.6.2", optional = true }
openssl = { version = "0.10", features = ["vendored"], optional = true }
rustls = {version = "0.20.2", optional = true}
rand = { version = "0.8.3", optional = true }
base64 = { version = "0.13.0", optional = true }
thiserror = "1.0.30"

[dev-dependencies]
httpmock = { version = "0.6.2" }
openssl = { version = "0.10", features = ["vendored"] }
rand = { version = "0.8.3" }
base64 = { version = "0.13.0" }

[features]
test-helper = ["httpmock", "openssl", "rand", "base64"]
rustls-tls = ["reqwest/rustls-tls"]
